Bug 299300 - libjingle fails to build
Summary: libjingle fails to build
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Jabber Plugin (other bugs)
Version First Reported In: SVN
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-03 13:42 UTC by Andrea Scarpino
Modified: 2012-05-03 16:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrea Scarpino 2012-05-03 13:42:41 UTC
[ 69%] Building CXX object kopete/protocols/jabber/googletalk/libjingle/talk/base/CMakeFiles/cricketbase.dir/socketaddress.o
/build/src/kdenetwork-4.8.3/kopete/protocols/jabber/googletalk/libjingle/talk/base/socketaddress.cc:271:5: warning: "WIN32" is not defined [-Wundef]
/build/src/kdenetwork-4.8.3/kopete/protocols/jabber/googletalk/libjingle/talk/base/socketaddress.cc:304:5: warning: "WIN32" is not defined [-Wundef]
/build/src/kdenetwork-4.8.3/kopete/protocols/jabber/googletalk/libjingle/talk/base/socketaddress.cc:211:6: warning: unused parameter ‘len’ [-Wunused-parameter]
/build/src/kdenetwork-4.8.3/kopete/protocols/jabber/googletalk/libjingle/talk/base/socketaddress.cc:219:6: warning: unused parameter ‘len’ [-Wunused-parameter]
/build/src/kdenetwork-4.8.3/kopete/protocols/jabber/googletalk/libjingle/talk/base/socketaddress.cc: In static member function ‘static std::string talk_base::SocketAddress::GetHostname()’:
/build/src/kdenetwork-4.8.3/kopete/protocols/jabber/googletalk/libjingle/talk/base/socketaddress.cc:284:49: error: ‘gethostname’ was not declared in this scope
make[2]: *** [kopete/protocols/jabber/googletalk/libjingle/talk/base/CMakeFiles/cricketbase.dir/socketaddress.o] Error 1
make[1]: *** [kopete/protocols/jabber/googletalk/libjingle/talk/base/CMakeFiles/cricketbase.dir/all] Error 2
make: *** [all] Error 2

Reproducible: Always

Steps to Reproduce:
1. Checkout last svn from http://websvn.kde.org/branches/KDE/4.8/kdenetwork/kopete/
2. Update to GCC 4.7
3. Try to build kopete
Actual Results:  
Build fails

Expected Results:  
It builds

KDE 4.8.2
GCC 4.7
Comment 1 Raphael Kubo da Costa 2012-05-03 16:11:07 UTC
SVN commit 1292762 by rkcosta:

Backport r1290696 by alexmerry.

  Fix build with latest GCC.
  Not addig changes to the patches folder, as these fixes are already in the
  ibjingle tree.

CCMAIL: kde@randomguy3.me.uk



 M  +1 -0      socketaddress.cc  
 M  +6 -0      ssladapter.cc  
 M  +9 -9      stringutils.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1292762