Backport r1290696 by alexmerry.

Fix build with latest GCC.
  Not addig changes to the patches folder, as these fixes are already in the
  ibjingle tree.

BUG: 299300
CCMAIL: kde@randomguy3.me.uk


svn path=/branches/KDE/4.8/kdenetwork/kopete/; revision=1292762