protocols/jabber/googletalk/libjingle/talk/base/socketaddress.cc
@@ -31,6 +31,7 @@
 #include <netinet/in.h>
 #include <arpa/inet.h>
 #include <netdb.h>
+#include <unistd.h>
 #endif
 
 #include <cstring>
